translation-tool/inputs/source_meta/objects/Common_Updateable_Fields_Act_Trans__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>The name of the program where this is being used</description>
        <inlineHelpText>The name of the program where this is being used</inlineHelpText>
        <label>Org Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NAD</fullName>
                    <default>true</default>
                    <label>NAD</label>
                </value>
                <value>
                    <fullName>YAH</fullName>
                </value>
                <value>
                    <fullName>HON</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <description>The Transaction Code for which you wish to configure editable fields</description>
        <label>Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Reason__c</fullName>
        <description>The combination of Transaction Code and Reason allows us to configure the editable fields on the account transaction history UI</description>
        <inlineHelpText>Select the reason for the Account transaction code. For the combination of Code + Reason, we have the &quot;API name&quot; field editable</inlineHelpText>
        <label>Transaction Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Updateable Fields On Account Transaction</label>
    <pluralLabel>Updateable Fields On Account Transaction</pluralLabel>
</CustomObject>